Support for the Negotiate authentication scheme, and corresponding rewrite of the NTLM authentication scheme.
The Negotiate authentication scheme is quite similar to NTLM, only
difference is that the number of handshakes varies (one or three), and
that there is a final blob sent to the client on successful authentication.

In this rewrite the challenge reuse functionality previously found in the
NTLM scheme has been ripped out. Was causing lots of headaches, and never
really working properly. Instead we will be looking into a more efficient
helper protocol to deal with this in a correct manner.

--- a/configure.in
+++ b/configure.in
@@ -2538,6 +2538,7 @@ AC_OUTPUT([\
 	src/auth/basic/Makefile \
 	src/auth/digest/Makefile \
 	src/auth/ntlm/Makefile \
+	src/auth/negotiate/Makefile \
 	contrib/Makefile \
 	snmplib/Makefile \
 	icons/Makefile \
