--- a/src/auth/Makefile.in
+++ b/src/auth/Makefile.in
@@ -125,15 +125,16 @@ makesnmplib = @makesnmplib@
 
 AUTOMAKE_OPTIONS = subdir-objects
 
-DIST_SUBDIRS = basic digest ntlm
+DIST_SUBDIRS = basic digest ntlm negotiate
 SUBDIRS = @AUTH_MODULES@
 
-EXTRA_LIBRARIES = libbasic.a libdigest.a libntlm.a
+EXTRA_LIBRARIES = libbasic.a libdigest.a libntlm.a libnegotiate.a
 noinst_LIBRARIES = @AUTH_LIBS@
 
 libbasic_a_SOURCES = basic/auth_basic.c basic/auth_basic.h
 libdigest_a_SOURCES = digest/auth_digest.c digest/auth_digest.h
 libntlm_a_SOURCES = ntlm/auth_ntlm.c ntlm/auth_ntlm.h
+libnegotiate_a_SOURCES = negotiate/auth_negotiate.c negotiate/auth_negotiate.h
 
 INCLUDES = -I. -I$(top_builddir)/include -I$(top_srcdir)/include \
 	-I$(top_srcdir)/src/
@@ -152,6 +153,10 @@ libdigest_a_AR = $(AR) cru
 libdigest_a_LIBADD =
 am_libdigest_a_OBJECTS = digest/auth_digest.$(OBJEXT)
 libdigest_a_OBJECTS = $(am_libdigest_a_OBJECTS)
+libnegotiate_a_AR = $(AR) cru
+libnegotiate_a_LIBADD =
+am_libnegotiate_a_OBJECTS = negotiate/auth_negotiate.$(OBJEXT)
+libnegotiate_a_OBJECTS = $(am_libnegotiate_a_OBJECTS)
 libntlm_a_AR = $(AR) cru
 libntlm_a_LIBADD =
 am_libntlm_a_OBJECTS = ntlm/auth_ntlm.$(OBJEXT)
@@ -165,6 +170,7 @@ LIBS = @LIBS@
 depcomp = $(SHELL) $(top_srcdir)/cfgaux/depcomp
 @AMDEP_TRUE@DEP_FILES = $(DEPDIR)/basic/auth_basic.Po \
 @AMDEP_TRUE@	$(DEPDIR)/digest/auth_digest.Po \
+@AMDEP_TRUE@	$(DEPDIR)/negotiate/auth_negotiate.Po \
 @AMDEP_TRUE@	$(DEPDIR)/ntlm/auth_ntlm.Po
 COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
 	$(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
@@ -172,14 +178,14 @@ CCLD = $(CC)
 LINK = $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@
 CFLAGS = @CFLAGS@
 DIST_SOURCES = $(libbasic_a_SOURCES) $(libdigest_a_SOURCES) \
-	$(libntlm_a_SOURCES)
+	$(libnegotiate_a_SOURCES) $(libntlm_a_SOURCES)
 
 RECURSIVE_TARGETS = info-recursive dvi-recursive install-info-recursive \
 	uninstall-info-recursive all-recursive install-data-recursive \
 	install-exec-recursive installdirs-recursive install-recursive \
 	uninstall-recursive check-recursive installcheck-recursive
 DIST_COMMON = Makefile.am Makefile.in
-SOURCES = $(libbasic_a_SOURCES) $(libdigest_a_SOURCES) $(libntlm_a_SOURCES)
+SOURCES = $(libbasic_a_SOURCES) $(libdigest_a_SOURCES) $(libnegotiate_a_SOURCES) $(libntlm_a_SOURCES)
 
 all: all-recursive
 
@@ -221,6 +227,18 @@ libdigest.a: $(libdigest_a_OBJECTS) $(libdigest_a_DEPENDENCIES)
 	-rm -f libdigest.a
 	$(libdigest_a_AR) libdigest.a $(libdigest_a_OBJECTS) $(libdigest_a_LIBADD)
 	$(RANLIB) libdigest.a
+negotiate/.dirstamp:
+	@$(mkinstalldirs) negotiate
+	@: > negotiate/.dirstamp
+$(DEPDIR)/negotiate/.dirstamp:
+	@$(mkinstalldirs) $(DEPDIR)/negotiate
+	@: > $(DEPDIR)/negotiate/.dirstamp
+negotiate/auth_negotiate.$(OBJEXT): negotiate/auth_negotiate.c \
+	negotiate/.dirstamp $(DEPDIR)/negotiate/.dirstamp
+libnegotiate.a: $(libnegotiate_a_OBJECTS) $(libnegotiate_a_DEPENDENCIES) 
+	-rm -f libnegotiate.a
+	$(libnegotiate_a_AR) libnegotiate.a $(libnegotiate_a_OBJECTS) $(libnegotiate_a_LIBADD)
+	$(RANLIB) libnegotiate.a
 ntlm/.dirstamp:
 	@$(mkinstalldirs) ntlm
 	@: > ntlm/.dirstamp
@@ -238,19 +256,23 @@ mostlyclean-compile:
 	-rm -f *.$(OBJEXT) core *.core
 	-rm -f basic/auth_basic.$(OBJEXT)
 	-rm -f digest/auth_digest.$(OBJEXT)
+	-rm -f negotiate/auth_negotiate.$(OBJEXT)
 	-rm -f ntlm/auth_ntlm.$(OBJEXT)
 
 distclean-compile:
 	-rm -f *.tab.c
 	-rm -f $(DEPDIR)/basic/.dirstamp
 	-rm -f $(DEPDIR)/digest/.dirstamp
+	-rm -f $(DEPDIR)/negotiate/.dirstamp
 	-rm -f $(DEPDIR)/ntlm/.dirstamp
 	-rm -f basic/.dirstamp
 	-rm -f digest/.dirstamp
+	-rm -f negotiate/.dirstamp
 	-rm -f ntlm/.dirstamp
 
 @AMDEP_TRUE@@am__include@ @am__quote@$(DEPDIR)/basic/auth_basic.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@$(DEPDIR)/digest/auth_digest.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@$(DEPDIR)/negotiate/auth_negotiate.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@$(DEPDIR)/ntlm/auth_ntlm.Po@am__quote@
 
 distclean-depend:
@@ -291,6 +313,18 @@ digest/auth_digest.obj: digest/auth_digest.c
 @AMDEP_TRUE@	depfile='$(DEPDIR)/digest/auth_digest.Po' tmpdepfile='$(DEPDIR)/digest/auth_digest.TPo' @AMDEPBACKSLASH@
 @AMDEP_TRUE@	$(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -c -o digest/auth_digest.obj `cygpath -w digest/auth_digest.c`
+
+negotiate/auth_negotiate.o: negotiate/auth_negotiate.c
+@AMDEP_TRUE@	source='negotiate/auth_negotiate.c' object='negotiate/auth_negotiate.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@	depfile='$(DEPDIR)/negotiate/auth_negotiate.Po' tmpdepfile='$(DEPDIR)/negotiate/auth_negotiate.TPo' @AMDEPBACKSLASH@
+@AMDEP_TRUE@	$(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -c -o negotiate/auth_negotiate.o `test -f negotiate/auth_negotiate.c || echo '$(srcdir)/'`negotiate/auth_negotiate.c
+
+negotiate/auth_negotiate.obj: negotiate/auth_negotiate.c
+@AMDEP_TRUE@	source='negotiate/auth_negotiate.c' object='negotiate/auth_negotiate.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@	depfile='$(DEPDIR)/negotiate/auth_negotiate.Po' tmpdepfile='$(DEPDIR)/negotiate/auth_negotiate.TPo' @AMDEPBACKSLASH@
+@AMDEP_TRUE@	$(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -c -o negotiate/auth_negotiate.obj `cygpath -w negotiate/auth_negotiate.c`
 
 ntlm/auth_ntlm.o: ntlm/auth_ntlm.c
 @AMDEP_TRUE@	source='ntlm/auth_ntlm.c' object='ntlm/auth_ntlm.o' libtool=no @AMDEPBACKSLASH@
