--- a/configure.in
+++ b/configure.in
@@ -2575,6 +2575,7 @@ AC_OUTPUT([\
 	helpers/basic_auth/winbind/Makefile \
 	helpers/digest_auth/Makefile \
 	helpers/digest_auth/password/Makefile \
+	helpers/digest_auth/ldap/Makefile \
 	helpers/ntlm_auth/Makefile \
 	helpers/ntlm_auth/fakeauth/Makefile \
 	helpers/ntlm_auth/no_check/Makefile \
