--- a/trunk/helpers/digest_auth/ldap/Makefile.am
+++ b/trunk/helpers/digest_auth/ldap/Makefile.am
@@ -6,12 +6,12 @@
 #  Uncomment and customize the following to suit your needs:
 #
 
-libexec_PROGRAMS = digest_pw_auth
-digest_pw_auth_SOURCES = digest_pw_auth.c \
+libexec_PROGRAMS = digest_ldap_auth
+digest_ldap_auth_SOURCES = digest_pw_auth.c \
 	digest_common.h \
-	text_backend.c \
-	text_backend.h
+	ldap_backend.c \
+	ldap_backend.h
 INCLUDES      = -I. -I$(top_builddir)/include -I$(top_srcdir)/include \
 		-I$(top_srcdir)/src/
 
-LDADD	= -L$(top_builddir)/lib -lmiscutil $(CRYPTLIB) $(XTRA_LIBS) $(SSLLIB)
+LDADD	= -L$(top_builddir)/lib -lmiscutil $(LIB_LDAP) $(LIB_LBER) $(CRYPTLIB) $(XTRA_LIBS) $(SSLLIB)
