--- a/trunk/configure.in
+++ b/trunk/configure.in
@@ -1752,8 +1752,20 @@ case "$host" in
 		;;
 esac
 
-dnl LDAP helpers need to know if -llber is needed or not
-AC_CHECK_LIB(lber, main, [LIB_LBER="-llber"])
+dnl On MinGW OpenLDAP is not available, so LDAP helpers can be linked 
+dnl only with Windows LDAP libraries using -lwldap32
+case "$host_os" in
+mingw|mingw32)
+       LIB_LDAP="-lwldap32"
+       LIB_LBER=""
+       ;;
+*)
+       LIB_LDAP="-lldap"
+       dnl LDAP helpers need to know if -llber is needed or not
+       AC_CHECK_LIB(lber, main, [LIB_LBER="-llber"])
+       ;;
+esac
+AC_SUBST(LIB_LDAP)
 AC_SUBST(LIB_LBER)
 
 dnl System-specific library modifications
