--- a/trunk/include/autoconf.h.in
+++ b/trunk/include/autoconf.h.in
@@ -421,6 +421,11 @@
  */
 #undef X_ACCELERATOR_VARY
 
+/*
+ * Enable authentication support in accelerators
+ */
+#undef AUTH_ON_ACCELERATION
+
 /* The number of bytes in a int.  */
 #undef SIZEOF_INT
 
@@ -570,6 +575,9 @@
 
 /* Define if you have the snprintf function.  */
 #undef HAVE_SNPRINTF
+
+/* Define if you have the socketpair function.  */
+#undef HAVE_SOCKETPAIR
 
 /* Define if you have the srand48 function.  */
 #undef HAVE_SRAND48
