--- a/helpers/basic_auth/LDAP/Makefile.in
+++ b/helpers/basic_auth/LDAP/Makefile.in
@@ -91,6 +91,7 @@ LIBDLMALLOC = @LIBDLMALLOC@
 LIBREGEX = @LIBREGEX@
 LIBSASL = @LIBSASL@
 LIB_LBER = @LIB_LBER@
+LIB_LDAP = @LIB_LDAP@
 LIB_MALLOC = @LIB_MALLOC@
 LN = @LN@
 LN_S = @LN_S@
@@ -131,7 +132,7 @@ man_MANS = squid_ldap_auth.8
 EXTRA_DIST = squid_ldap_auth.8
 squid_ldap_auth_SOURCES = squid_ldap_auth.c
 
-LDADD = -L$(top_builddir)/lib -lmiscutil -lldap $(LIB_LBER) $(XTRA_LIBS)
+LDADD = -L$(top_builddir)/lib -lmiscutil $(LIB_LDAP) $(LIB_LBER) $(XTRA_LIBS)
 INCLUDES = -I$(top_srcdir)/include
 subdir = helpers/basic_auth/LDAP
 mkinstalldirs = $(SHELL) $(top_srcdir)/cfgaux/mkinstalldirs
