--- a/trunk/helpers/basic_auth/SMB/Makefile.in
+++ b/trunk/helpers/basic_auth/SMB/Makefile.in
@@ -96,6 +96,7 @@ LIBDLMALLOC = @LIBDLMALLOC@
 LIBREGEX = @LIBREGEX@
 LIBSASL = @LIBSASL@
 LIB_LBER = @LIB_LBER@
+LIB_LDAP = @LIB_LDAP@
 LIB_MALLOC = @LIB_MALLOC@
 LN = @LN@
 LN_S = @LN_S@
