Windows native support for ARP acls
Supported build platforms:

Cygwin
MinGW + Msys
MS Visual Studio 6

--- a/configure.in
+++ b/configure.in
@@ -585,6 +585,12 @@ AC_ARG_ENABLE(arp-acl,
 	    ;;
 	*-freebsd*)
 	    ;;
+	*-cygwin*)
+        LIBS="$LIBS -liphlpapi"
+	    ;;
+	*-mingw*)
+        LIBS="$LIBS -liphlpapi"
+	    ;;
 	*)
 	    echo "WARNING: ARP ACL support probably won't work on $host."
 	    sleep 10
