--- a/trunk/include/autoconf.h.in
+++ b/trunk/include/autoconf.h.in
@@ -426,6 +426,11 @@
  */
 #undef AUTH_ON_ACCELERATION
 
+/*
+ * Supports epoll
+ */
+#undef HAVE_EPOLL
+
 /* The number of bytes in a int.  */
 #undef SIZEOF_INT
 
@@ -458,6 +463,9 @@
 
 /* Define if you have the drand48 function.  */
 #undef HAVE_DRAND48
+
+/* Define if you have the epoll_ctl function.  */
+#undef HAVE_EPOLL_CTL
 
 /* Define if you have the fchmod function.  */
 #undef HAVE_FCHMOD
