--- a/helpers/ntlm_auth/SMB/smbval/Makefile.in
+++ b/helpers/ntlm_auth/SMB/smbval/Makefile.in
@@ -93,6 +93,7 @@ LN_S = @LN_S@
 MAINT = @MAINT@
 MKDIR = @MKDIR@
 MV = @MV@
+NEGOTIATE_AUTH_HELPERS = @NEGOTIATE_AUTH_HELPERS@
 NTLM_AUTH_HELPERS = @NTLM_AUTH_HELPERS@
 OBJEXT = @OBJEXT@
 OPT_DEFAULT_HOSTS = @OPT_DEFAULT_HOSTS@
