Remove obsolete Samba-2.2.X winbind helpers.
These days we rely upon the Samba team to provide winbind helpers as
integral part of Samba-3.0 and later, and with Samba-2.X being
end-of-life there is no reason for us to continue shipping our old
helpers.

--- a/Makefile.am
+++ b/Makefile.am
@@ -11,7 +11,7 @@ DISTCLEANFILES = include/stamp-h include/stamp-h[0-9]*
 DEFAULT_PINGER		= $(libexecdir)/`echo pinger | sed '$(transform);s/$$/$(EXEEXT)/'`
 
 dist-hook:
-	@ for subdir in include include/samba/nsswitch; do \
+	@ for subdir in include; do \
 	  if test "$$subdir" = .; then :; else \
 	    test -d $(distdir)/$$subdir \
 	    || mkdir $(distdir)/$$subdir \
@@ -37,8 +37,7 @@ EXTRA_DIST = \
 	QUICKSTART \
 	README \
 	SPONSORS \
-	bootstrap.sh \
-	include/samba/README.txt
+	bootstrap.sh
 
 install-pinger:
 	chown root $(DEFAULT_PINGER) 
