--- a/helpers/external_acl/unix_group/Makefile.am
+++ b/helpers/external_acl/unix_group/Makefile.am
@@ -6,7 +6,10 @@
 #  Uncomment and customize the following to suit your needs:
 #
 
-libexec_PROGRAMS 	= squid_unix_group
-man_MANS 		= squid_unix_group.8
-EXTRA_DIST		= squid_unix_group.8
+libexec_PROGRAMS 		= squid_unix_group
+man_MANS 			= squid_unix_group.8
+EXTRA_DIST			= squid_unix_group.8
 squid_unix_group_SOURCES	= check_group.c
+
+LDADD		= -L$(top_builddir)/lib -lmiscutil @XTRA_LIBS@
+INCLUDES	= -I. -I$(top_builddir)/include -I$(top_srcdir)/include
