--- a/helpers/external_acl/ldap_group/Makefile.am
+++ b/helpers/external_acl/ldap_group/Makefile.am
@@ -6,9 +6,10 @@
 #  Uncomment and customize the following to suit your needs:
 #
 
-libexec_PROGRAMS 	= squid_ldap_group
-man_MANS 		= squid_ldap_group.8
-EXTRA_DIST		= squid_ldap_group.8
+libexec_PROGRAMS 		= squid_ldap_group
+man_MANS 			= squid_ldap_group.8
+EXTRA_DIST			= squid_ldap_group.8
 squid_ldap_group_SOURCES	= squid_ldap_group.c
 
-LDADD = $(LIB_LDAP) $(LIB_LBER) $(XTRA_LIBS)
+LDADD		= -L$(top_builddir)/lib -lmiscutil $(LIB_LDAP) $(LIB_LBER) @XTRA_LIBS@
+INCLUDES	= -I. -I$(top_builddir)/include -I$(top_srcdir)/include
