--- a/src/repl/Makefile.am
+++ b/src/repl/Makefile.am
@@ -17,7 +17,7 @@ liblru_a_SOURCES = lru/store_repl_lru.c
 libheap_a_SOURCES = heap/store_heap_replacement.h heap/store_heap_replacement.c heap/store_repl_heap.c
 
 INCLUDES      = -I. -I$(top_builddir)/include -I$(top_srcdir)/include \
-	-I$(top_srcdir)/src/
+	-I$(top_srcdir)/src
 
 ##all:
 ##	@test -z "$(SUBDIRS)" || for dir in $(SUBDIRS); do \
