--- a/src/auth/Makefile.in
+++ b/src/auth/Makefile.in
@@ -257,7 +257,7 @@ libdigest_a_SOURCES = digest/auth_digest.c digest/auth_digest.h
 libntlm_a_SOURCES = ntlm/auth_ntlm.c ntlm/auth_ntlm.h
 libnegotiate_a_SOURCES = negotiate/auth_negotiate.c negotiate/auth_negotiate.h
 INCLUDES = -I. -I$(top_builddir)/include -I$(top_srcdir)/include \
-	-I$(top_srcdir)/src/
+	-I$(top_srcdir)/src
 
 all: all-recursive
 
